[package]
name = "node_module_test"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib"]

[dependencies]
napi = {version="2", features=["async"]}
napi-derive = "2"
tokio = {version = "*", features = ["full"]}

[build-dependencies]
napi-build = "2"
